[package]
name = "day01"
version = "0.1.0"
edition = "2021"

[lib]
name = "day01"
path = "src/lib.rs"
test = true
crate-type = ["lib"]
doctest = false

[[bin]]
name = "day01"
path = "src/main.rs"
test = false
doctest = false

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
