[package]
name = "day03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "day03"
path = "src/lib.rs"
test = true
crate-type = ["lib"]
doctest = false

[[bin]]
name = "day03"
path = "src/main.rs"
test = false
doctest = false

[dependencies]
regex = { workspace = true }
