[package]
name = "day04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "day04"
path = "src/lib.rs"
test = true
crate-type = ["lib"]
doctest = false


[[bin]]
name = "day04"
path = "src/main.rs"
test = false
doctest = false

[dependencies]
tap = "1.0.1"
