[package]
name = "day04"
version = "0.1.0"
edition = "2021"

[lib]
name = "day04"
path = "src/lib.rs"
test = true
crate-type = ["lib"]
doctest = false


[[bin]]
name = "day04"
path = "src/main.rs"
test = false
doctest = false

[dependencies]
tap = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
