[package]
name = "day05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "day05"
path = "src/lib.rs"
test = true
crate-type = ["lib"]
doctest = false


[[bin]]
name = "day05"
path = "src/main.rs"
test = false
doctest = false

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
tap = { workspace = true }
